[package]
name = "hotspot"
version = "0.5.5"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/hotspot"
homepage = "https://github.com/markov-chain/hotspot"
documentation = "https://markov-chain.github.io/hotspot"
description = "The package provides an interface to HotSpot."
build = "build.rs"

[dependencies]
libc = "0.2"
matrix = { version = "0.21", default-features = false }

[dev-dependencies]
assert = "0.6"
