[package]
name = "hotspot"
version = "0.6.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an interface to HotSpot."
documentation = "https://markov-chain.github.io/hotspot"
homepage = "https://github.com/markov-chain/hotspot"
repository = "https://github.com/markov-chain/hotspot"
build = "build.rs"
links = "hotspot"

[dependencies]
libc = "0.2"
matrix = { version = "0.21", default-features = false }

[dev-dependencies]
assert = "0.7"
